--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Document</title>
 
     <!-- Font-Awesome -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Boostrap -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
-         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
 
 
@@ -24,10 +24,143 @@
 </head>
 
 <body>
+    <header id="header">
+        <div class="d-flex align-items-center">
+            <img src="./img/mobile-logo.png" alt="" class="mobile-logo  d-lg-none">
+            <img src="./img/logo.svg" alt="" class="img-fluid d-none d-lg-block p-1">
+            <div class="input-group me-3 p-3">
+                <span class="input-group-text " id="basic-addon1"><i class="fa-solid fa-magnifying-glass p-2"
+                        style="color: #000;"></i></span>
+                <input type="text" class="form-control fw-semibold" placeholder="Prova a cercare: Lezione di Laravel"
+                    aria-label="Username" aria-describedby="basic-addon1">
+            </div>
+            <div class="dropdown me-2 ">
+                <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
+                    aria-expanded="false" data-bs-offset="10,20">
+                    <i class="fa-solid fa-bell" style="color: #ff8f00;"></i>
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Profilo</a></li>
+                    <li><a class="dropdown-item" href="#">Fatturazione</a></li>
+                    <li><a class="dropdown-item" href="#">Logout</a></li>
 
+                </ul>
+            </div>
+    </header>
+    <div class="container-fluid d-flex px-0">
+        <div id="sidebar" class="d-flex flex-column ">
+            <button type="button" class="btn btn-outline-light m-2"><i class="fa-solid fa-house"></i></button>
+            <button type="button" class="btn btn-outline-light m-2"><i class="fa-solid fa-chart-simple"></i></button>
+            <button type="button" class="btn btn-outline-light m-2"><i class="fa-solid fa-signal"></i></button>
+            <button type="button" class="btn btn-outline-light m-2 mt-auto"><i class="fa-solid fa-gear"></i></button>
+        </div>
+        <main id="main" class="p-3">
+            <div class="blue-box mb-4">
 
+            </div>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 col-lg-8">
+                        <div class="card">
+                            <div class="card-header">
+                                <span class="fw-bold">Prossime Classi</span>
+                            </div>
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th>Nome</th>
+                                        <th>Stato</th>
+                                        <th>Azione</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td class="fw-semibold"><img src="./img/class-avatar.jpg" alt=""
+                                                class="avatar-class p-2">Classe 75</td>
+                                        <td><span class="badge text-bg-success">Done</span></td>
+                                        <td><button type="button" class="btn btn-outline-secondary"><i
+                                                    class="fa-solid fa-pencil"></i></button>
+                                            <button type="button" class="btn btn-outline-secondary"><i
+                                                    class="fa-solid fa-trash"></i></button>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="fw-semibold"><img src="./img/class-avatar.jpg" alt=""
+                                                class="avatar-class p-2">Classe 76</td>
+                                        <td><span class="badge text-bg-success">Done </span></td>
+                                        <td><button type="button" class="btn btn-outline-secondary"><i
+                                                    class="fa-solid fa-pencil"></i></button>
+                                            <button type="button" class="btn btn-outline-secondary"><i
+                                                    class="fa-solid fa-trash"></i></button>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="fw-semibold"><img src="./img/class-avatar.jpg" alt=""
+                                                class="avatar-class p-2">Classe 77</td>
+                                        <td><span class="badge text-bg-warning text-white">Process </span></td>
+                                        <td><button type="button" class="btn btn-outline-secondary"><i
+                                                    class="fa-solid fa-pencil"></i></button>
+                                            <button type="button" class="btn btn-outline-secondary"><i
+                                                    class="fa-solid fa-trash"></i></button>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="fw-semibold"><img src="./img/class-avatar.jpg" alt=""
+                                                class="avatar-class p-2">Classe 78</td>
+                                        <td><span class="badge text-bg-success">Done </span></td>
+                                        <td><button type="button" class="btn btn-outline-secondary"><i
+                                                    class="fa-solid fa-pencil"></i></button>
+                                            <button type="button" class="btn btn-outline-secondary"><i
+                                                    class="fa-solid fa-trash"></i></button>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="fw-semibold"><img src="./img/class-avatar.jpg" alt=""
+                                                class="avatar-class p-2">Classe 79</td>
+                                        <td><span class="badge text-bg-danger">Failed </span></td>
+                                        <td><button type="button" class="btn btn-outline-secondary"><i
+                                                    class="fa-solid fa-pencil"></i></button>
+                                            <button type="button" class="btn btn-outline-secondary"><i
+                                                    class="fa-solid fa-trash"></i></button>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="fw-semibold"><img src="./img/class-avatar.jpg" alt=""
+                                                class="avatar-class p-2">Classe 80</td>
+                                        <td><span class="badge text-bg-success">Done </span></td>
+                                        <td><button type="button" class="btn btn-outline-secondary"><i
+                                                    class="fa-solid fa-pencil"></i></button>
+                                            <button type="button" class="btn btn-outline-secondary"><i
+                                                    class="fa-solid fa-trash"></i></button>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="fw-semibold"><img src="./img/class-avatar.jpg" alt=""
+                                                class="avatar-class p-2">Classe 81</td>
+                                        <td><span class="badge text-bg-danger">Failed </span></td>
+                                        <td><button type="button" class="btn btn-outline-secondary"><i
+                                                    class="fa-solid fa-pencil"></i></button>
+                                            <button type="button" class="btn btn-outline-secondary"><i
+                                                    class="fa-solid fa-trash"></i></button>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="fw-semibold"><img src="./img/class-avatar.jpg" alt=""
+                                                class="avatar-class p-2">Classe 82</td>
+                                        <td><span class="badge text-bg-success">Done </span></td>
+                                        <td><button type="button" class="btn btn-outline-secondary"><i
+                                                    class="fa-solid fa-pencil"></i></button>
+                                            <button type="button" class="btn btn-outline-secondary"><i
+                                                    class="fa-solid fa-trash"></i>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
 
-
+        </main>
+    </div>
     <!-- Bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
