--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     aria-label="Username" aria-describedby="basic-addon1">
             </div>
             <div class="dropdown me-2 ">
-                <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
-                    aria-expanded="false" data-bs-offset="10,20">
+                <button type="button" class="btn border-0" data-bs-toggle="dropdown" aria-expanded="false"
+                    data-bs-offset="10,20">
                     <i class="fa-solid fa-bell" style="color: #ff8f00;"></i>
                 </button>
                 <ul class="dropdown-menu">
@@ -48,15 +48,52 @@
             </div>
     </header>
     <div class="container-fluid d-flex px-0">
-        <div id="sidebar" class="d-flex flex-column ">
-            <button type="button" class="btn btn-outline-light m-2"><i class="fa-solid fa-house"></i></button>
-            <button type="button" class="btn btn-outline-light m-2"><i class="fa-solid fa-chart-simple"></i></button>
-            <button type="button" class="btn btn-outline-light m-2"><i class="fa-solid fa-signal"></i></button>
-            <button type="button" class="btn btn-outline-light m-2 mt-auto"><i class="fa-solid fa-gear"></i></button>
+        <div id="sidebar" class="d-flex flex-column">
+            <button type="button" class="btn btn-outline-light mt-4 ">
+                <i class="fa-solid fa-house"></i>
+                <p class="d-none d-lg-inline ">Home</p>
+            </button>
+            <button type="button" class="btn btn-outline-light ">
+                <i class="fa-solid fa-chart-simple ">
+                </i>
+                <p class="d-none d-lg-inline ">Stats</p>
+            </button>
+            <button type="button" class="btn btn-outline-light  ">
+                <i class="fa-solid fa-signal ">
+                </i>
+                <p class="d-none d-lg-inline ">Signal</p>
+            </button>
+            <button type="button" class="btn btn-outline-light  mt-auto ">
+                <i class="fa-solid fa-gear ">
+                </i>
+                <p class="d-none d-lg-inline ">Admin</p>
+            </button>
         </div>
-        <main id="main" class="p-3">
-            <div class="blue-box mb-4">
-
+        <main id="main">
+            <div class="blue-box mb-4 container-fluid ">
+                <div class=" d-md-flex justify-content-md-between p-3">
+                    <div class="text-white order-md-1">Nuovo Studente
+                        <button type="button" class="btn btn-outline-light mx-3"><i
+                                class="fa-solid fa-plus"></i></button>
+                    </div>
+                    <div>
+                        <div class="d-flex align-items-center">
+                            <h1 class="text-white p-1">Boolean</h1><span
+                                class="badge text-bg-subtle h-25 rounded-pill mx-1 p-2">Piano
+                                blaze</span>
+                        </div>
+                        <div>
+                            <span class="badge text-bg-subtle h-25 rounded-pill mx-1 p-2">3 app</span><i
+                                class="fa-solid fa-angles-right text-center  mx-1"></i>
+                            <span class="badge text-bg-subtle h-25 rounded-pill mx-1 p-2 d-lg-none"><i
+                                    class="fa-solid fa-plus"></i></span>
+                        </div>
+                    </div>
+                    <div class="text-start">
+                        <p class="text-white">Studenti online negli ultimi 30 giorni</p>
+                        <p class="text-white fs-3 ">125</p>
+                    </div>
+                </div>
             </div>
             <div class="container-fluid">
                 <div class="row">
@@ -157,14 +194,111 @@
                                 </tbody>
                             </table>
                         </div>
-                    </div>
+                        <div class="card mt-5">
+                            <div class="card-header">
+                                F.A.Q.
+                            </div>
+                            <div class="accordion accordion-flush" id="accordionFlushExample">
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                        <button class="accordion-button collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
+                                            aria-expanded="false" aria-controls="flush-collapseOne">
+                                            Come aggiungere un nuovo studente?
+                                        </button>
+                                    </h2>
+                                    <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                        data-bs-parent="#accordionFlushExample">
+                                        <div class="accordion-body">Placeholder content for this accordion, which is
+                                            intended to demonstrate the <code>.accordion-flush</code> class. This is the
+                                            first item's accordion body.</div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                        <button class="accordion-button collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo"
+                                            aria-expanded="false" aria-controls="flush-collapseTwo">
+                                            Come posso accedere alle informazioni del mio account?
+                                        </button>
+                                    </h2>
+                                    <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                                        data-bs-parent="#accordionFlushExample">
+                                        <div class="accordion-body">Placeholder content for this accordion, which is
+                                            intended to demonstrate the <code>.accordion-flush</code> class. This is the
+                                            second item's accordion body. Let's imagine this being filled with some
+                                            actual content.</div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                        <button class="accordion-button collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#flush-collapseThree"
+                                            aria-expanded="false" aria-controls="flush-collapseThree">
+                                            Posso usare questa dashboard da mobile?
+                                        </button>
+                                    </h2>
+                                    <div id="flush-collapseThree" class="accordion-collapse collapse"
+                                        data-bs-parent="#accordionFlushExample">
+                                        <div class="accordion-body">Placeholder content for this accordion, which is
+                                            intended to demonstrate the <code>.accordion-flush</code> class. This is the
+                                            third item's accordion body. Nothing more exciting happening here in terms
+                                            of content, but just filling up the space to make it look, at least at first
+                                            glance, a bit more representative of how this would look in a real-world
+                                            application.</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <div class="card">
+                            <div class="card-header">
+                                Todo
+                            </div>
+                            <div class="form-check mt-3 mx-3">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                <label class="form-check-label" for="flexCheckDefault">
+                                    Kickoff nuove classi
+                                </label>
+                            </div>
+                            <div class="form-check mt-1 mx-3">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                <label class="form-check-label" for="flexCheckDefault">
+                                    Lezione su Bootstrap 5 in classe #75
+                                </label>
+                            </div>
+                            <div class="form-check mt-1 mx-3">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                <label class="form-check-label" for="flexCheckDefault">
+                                    Controllare username github studenti
+                                </label>
+                            </div>
+                        </div>
+                        <div class="card mt-5">
+                            <img src="./img/stats.jpeg" class="card-img-top" alt="active utent">
+                            <div class="card-body">
+                                <h5 class="card-title">Utenti attivi</h5>
+                                <p class="card-text">Lista degli utenti attivi in piattaforma
+                                    nell'ultimo mese</p>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Gennaio: 1200 </li>
+                                <li class="list-group-item">Febbraio: 800</li>
+                                <li class="list-group-item">Marzo: 1500</li>
+                            </ul>
+                            <div class="card-body">
+                                <a href="#" class="card-link">Visualizza report approfondito</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </main>
-    </div>
-    <!-- Bootstrap js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+        <!-- Bootstrap js -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
