--- a/index.html
+++ b/index.html
@@ -75,38 +75,92 @@
         <main id="main">
             <div class="blue-box mb-4 container-fluid ">
                 <div class=" d-md-flex justify-content-md-between p-3">
-                    <div class="text-white order-md-1">Nuovo Studente
+                    <div class="text-white order-md-1 fw-semibold">Nuovo Studente
                         <button class="btn btn-outline-light mx-3" type="button" data-bs-toggle="offcanvas"
                             data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><i
                                 class="fa-solid fa-plus"></i></button>
-
                         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
                             aria-labelledby="offcanvasRightLabel">
                             <div class="offcanvas-header">
-                                <h5 class="offcanvas-title" id="offcanvasRightLabel">
-                                </h5>
+                                <h5 class="offcanvas-title" id="offcanvasRightLabel">Inserisci un nuovo studente</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
                                     aria-label="Close"></button>
                             </div>
                             <div class="offcanvas-body">
-                                <div class="d-flex">
-                                    <div class="mb-3">
-                                        <label for="exampleFormControlInput1" class="form-label">Nome</label>
-                                        <input type="email" class="form-control" id="exampleFormControlInput1"
-                                            placeholder="Mario">
+                                <form class="row g-3">
+                                    <div class="col-md-6">
+                                        <label for="fistname4" class="form-label">Nome</label>
+                                        <input type="firstname" class="form-control bg-light p-1 border border-black"
+                                            id="firstname">
+                                    </div>
+                                    <div class="col-md-6">
+                                        <label for="lastname4" class="form-label">Cognome</label>
+                                        <input type="lastname" class="form-control bg-light p-1 border border-black"
+                                            id="lastname4">
+                                    </div>
+                                    <div class="col-md-6">
+                                        <label for="exampleFormControlInput1" class="form-label">Email</label>
+                                        <input type="email" class="form-control bg-light p-1 border border-black"
+                                            id="exampleFormControlInput1" placeholder="mariorossi@rossi.it">
+                                    </div>
+                                    <div class="col-md-6">
+                                        <label for="inputPassword5" class="form-label ">Password</label>
+                                        <input type="password" id="inputPassword5"
+                                            class="form-control bg-light p-1 border border-black"
+                                            aria-describedby="passwordHelpBlock">
+                                        <div id="passwordHelpBlock" class="form-text">
+                                            Inserisci una password di un minimo di 8 caratteri e un massimo di 20
+                                            caratteri è consentito l'utilizzo di caretteri speciali (es. !@#?)
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <label for="exampleFormControlInput1" class="form-label">Conferma Email</label>
+                                        <input type="email" class="form-control bg-light p-1 border border-black"
+                                            id="exampleFormControlInput1" placeholder="mariorossi@rossi.it">
+                                    </div>
+                                    <div class="col-md-6">
+                                        <label for="inputPassword5" class="form-label ">Conferma Password</label>
+                                        <input type="password" id="inputPassword5"
+                                            class="form-control bg-light p-1 border border-black"
+                                            aria-describedby="passwordHelpBlock">
+                                    </div>
+                                    <div class="col-12">
+                                        <label for="inputAddress" class="form-label">Indirizzo</label>
+                                        <input type="text" class="form-control bg-light p-1 border border-black"
+                                            id="inputAddress" placeholder="Via torino 215">
+                                    </div>
+                                    <div class="col-md-6">
+                                        <label for="inputCity" class="form-label">Città</label>
+                                        <input type="text" class="form-control bg-light p-1 border border-black"
+                                            id="inputCity">
+                                    </div>
+                                    <div class="col-md-4">
+                                        <label for="inputState" class="form-label ">Stato</label>
+                                        <select id="inputState" class="form-select bg-light p-1 border border-black">
+                                            <option selected>Scegli...</option>
+                                            <option>...</option>
+                                        </select>
+                                    </div>
+                                    <div class="col-md-2">
+                                        <label for="inputZip" class="form-label ">CAP</label>
+                                        <input type="text" class="form-control bg-light p-1 border border-black"
+                                            id="inputZip">
                                     </div>
                                     <div class="mb-3">
-                                        <label for="exampleFormControlInput1" class="form-label">Cognome</label>
-                                        <input type="email" class="form-control" id="exampleFormControlInput1"
-                                            placeholder="Rossi">
+                                        <label for="formFile" class="form-label">Foto</label>
+                                        <input class="form-control bg-light p-1 border border-black" type="file"
+                                            id="formFile">
                                     </div>
-                                </div>
-                                <div class="d-flex">
-                                    <input class="form-control" type="text" placeholder="Default input"
-                                        aria-label="default input example">
-                                    <input class="form-control" type="text" placeholder="Default input"
-                                        aria-label="default input example">
-                                </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                        <label class="form-check-label" for="flexCheckDefault">
+                                            Seleziona per proseguire
+                                        </label>
+                                    </div>
+                                    <div class="d-flex justify-content-between">
+                                        <button type="button" class="btn btn-primary">Salva</button>
+                                        <button type="button" class="btn btn-warning">Svuota</button>
+                                    </div>
                             </div>
                         </div>
                     </div>
@@ -123,7 +177,8 @@
                                     class="fa-solid fa-plus"></i></span>
                             <span class="badge text-bg-subtle h-25 rounded-pill mx-1 p-2 d-none d-lg-inline">Boolean
                                 mobile app</span>
-                            <span class="badge text-bg-subtle h-25 rounded-pill mx-1 p-2 d-none d-lg-inline">Boolean web
+                            <span class="badge text-bg-subtle h-25 rounded-pill mx-1 p-2 d-none d-lg-inline">Boolean
+                                web
                                 app</span>
                             <span class="badge text-bg-subtle h-25 rounded-pill mx-1 p-2 d-none d-lg-inline">Boolean
                                 blog
@@ -131,7 +186,7 @@
                         </div>
                     </div>
                     <div class="text-start">
-                        <p class="text-white">Studenti online negli ultimi 30 giorni</p>
+                        <p class="text-white fw-semibold">Studenti online negli ultimi 30 giorni</p>
                         <p class="text-white fs-3 ">125</p>
                     </div>
                 </div>
@@ -141,12 +196,14 @@
                     <div class="col-12 col-lg-8">
                         <div class="card">
                             <div class="card-header">
-                                <span class="fw-bold">Prossime Classi</span>
+                                <h2 class="fw-bold">Prossime Classi</h2>
                             </div>
                             <table class="table">
                                 <thead>
                                     <tr>
                                         <th>Nome</th>
+                                        <th></th>
+                                        <th></th>
                                         <th class="d-none d-md-table-cell">Data inizio</th>
                                         <th class="d-none d-md-table-cell">ROI</th>
                                         <th>Stato</th>
@@ -157,8 +214,8 @@
                                     <tr>
                                         <td class="fw-semibold"><img src="./img/class-avatar.jpg" alt=""
                                                 class="avatar-class p-2">Classe 75</td>
-
-
+                                        <td></td>
+                                        <td></td>
                                         <td class="d-none d-md-table-cell fw-semibold">15 Feb 2021</td>
                                         <td class="d-none d-md-table-cell fw-semibold">20%</td>
                                         <td><span class="badge text-bg-success">Done</span></td>
@@ -171,7 +228,8 @@
                                     <tr>
                                         <td class="fw-semibold"><img src="./img/class-avatar.jpg" alt=""
                                                 class="avatar-class p-2">Classe 76</td>
-
+                                        <td></td>
+                                        <td></td>
                                         <td class="d-none d-md-table-cell fw-semibold">16 Feb 2021</td>
                                         <td class="d-none d-md-table-cell fw-semibold">20%</td>
                                         <td><span class="badge text-bg-success">Done </span></td>
@@ -184,7 +242,8 @@
                                     <tr>
                                         <td class="fw-semibold"><img src="./img/class-avatar.jpg" alt=""
                                                 class="avatar-class p-2">Classe 77</td>
-
+                                        <td></td>
+                                        <td></td>
                                         <td class="d-none d-md-table-cell fw-semibold">17 Feb 2021</td>
                                         <td class="d-none d-md-table-cell fw-semibold">20%</td>
                                         <td><span class="badge text-bg-warning text-white">Process </span></td>
@@ -197,7 +256,8 @@
                                     <tr>
                                         <td class="fw-semibold"><img src="./img/class-avatar.jpg" alt=""
                                                 class="avatar-class p-2">Classe 78</td>
-
+                                        <td></td>
+                                        <td></td>
                                         <td class="d-none d-md-table-cell fw-semibold">18 Feb 2021</td>
                                         <td class="d-none d-md-table-cell fw-semibold">20%</td>
                                         <td><span class="badge text-bg-success">Done </span></td>
@@ -210,7 +270,8 @@
                                     <tr>
                                         <td class="fw-semibold"><img src="./img/class-avatar.jpg" alt=""
                                                 class="avatar-class p-2">Classe 79</td>
-
+                                        <td></td>
+                                        <td></td>
                                         <td class="d-none d-md-table-cell fw-semibold">19 Feb 2021</td>
                                         <td class="d-none d-md-table-cell fw-semibold">20%</td>
                                         <td><span class="badge text-bg-danger">Failed </span></td>
@@ -223,7 +284,8 @@
                                     <tr>
                                         <td class="fw-semibold"><img src="./img/class-avatar.jpg" alt=""
                                                 class="avatar-class p-2">Classe 80</td>
-
+                                        <td></td>
+                                        <td></td>
                                         <td class="d-none d-md-table-cell fw-semibold">20 Feb 2021</td>
                                         <td class="d-none d-md-table-cell fw-semibold">20%</td>
 
@@ -237,7 +299,8 @@
                                     <tr>
                                         <td class="fw-semibold"><img src="./img/class-avatar.jpg" alt=""
                                                 class="avatar-class p-2">Classe 81</td>
-
+                                        <td></td>
+                                        <td></td>
                                         <td class="d-none d-md-table-cell fw-semibold">21 Feb 2021</td>
                                         <td class="d-none d-md-table-cell fw-semibold">20%</td>
                                         <td><span class="badge text-bg-danger">Failed </span></td>
@@ -250,7 +313,8 @@
                                     <tr>
                                         <td class="fw-semibold"><img src="./img/class-avatar.jpg" alt=""
                                                 class="avatar-class p-2">Classe 82</td>
-
+                                        <td></td>
+                                        <td></td>
                                         <td class="d-none d-md-table-cell fw-semibold">22 Feb 2021</td>
                                         <td class="d-none d-md-table-cell fw-semibold">20%</td>
                                         <td><span class="badge text-bg-success">Done </span></td>
@@ -264,7 +328,7 @@
                             </table>
                         </div>
                         <div class="card mt-5">
-                            <div class="card-header">
+                            <div class="card-header h3">
                                 F.A.Q.
                             </div>
                             <div class="accordion accordion-flush" id="accordionFlushExample">
@@ -304,7 +368,8 @@
                                     </h2>
                                     <div id="flush-collapseThree" class="accordion-collapse collapse"
                                         data-bs-parent="#accordionFlushExample">
-                                        <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing
+                                        <div class="accordion-body">Lorem ipsum dolor sit amet consectetur
+                                            adipisicing
                                             elit. In sed dolorem ullam ea mollitia ad numquam quam inventore, iure
                                             aspernatur tempore dolores odio accusantium culpa ducimus aliquid eius,
                                             reiciendis expedita.</div>
@@ -316,7 +381,7 @@
                     </div>
                     <div class="col-12 col-lg-4">
                         <div class="card">
-                            <div class="card-header">
+                            <div class="card-header h3">
                                 Todo
                             </div>
                             <div class="form-check mt-3 mx-3">
