remove space between and add margin in offcanvas button

--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
                                             Seleziona per proseguire
                                         </label>
                                     </div>
-                                    <div class="d-flex justify-content-between">
-                                        <button type="button" class="btn btn-primary">Salva</button>
+                                    <div class="d-flex">
+                                        <button type="button" class="btn btn-primary me-2">Salva</button>
                                         <button type="button" class="btn btn-warning">Svuota</button>
                                     </div>
                             </div>
